src/Components/Input/CreateForm.css
html {
    height: 100%;
    background-color: #AED9E0;
}
body {
    min-height: 100%;
}

body > #root > div {
    height: 100vh;
}

.App {
    display: grid;
    grid-template-columns: 2fr;
    grid-template-rows: 1fr;
    justify-content: center;
    align-items: center;
    align-content: center;
    justify-items: center;
}

.form {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 15rem;
}
  

.formInput {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    max-width: 350px;
    gap: 25px;
    padding: 50px;
    border-radius: 10px;
    background-color: #5E6472;
}

.inputText {
    font-family: monospace;
    max-width: 190px;
    outline: none;
    border: 1px solid #dadada;
    padding: 8px;
    border-radius: 5px;
    background-color: #f3f7fe;
    transition: .3s;
    color: #3b82f6;
  }
  
.inputText:focus {
    border: 1px solid #3b82f6;
    box-shadow: 0 0 0 4px #3b83f65f
}

.formValues{
    display: flex;
    flex-wrap: wrap;
    padding: 50px;
    width: 500px;
    height: 750px;
    gap: 30px;
    background-color: #fcf7e9;
    max-width: 100%;
    overflow: auto;
    overflow-y: auto;
}

.basicInfo{
    display: flex;
    flex-direction: column;
    gap: 10px;
    height: 200px;
    width: 320px;
    padding-left: 30px;
    text-align: start;
    max-width: 100%;
    word-wrap: break-word;
    overflow-y: auto;
}

.education, .work {
    display: grid;
    grid-column-start: 1;
    grid-column-end: 3;
    gap: 10px;
    padding-top: 15px;
    padding-bottom: 30px;
    max-height: 200px;
    width: 480px;
    text-align: start;
    max-width: 100%;
    word-wrap: break-word;
    white-space: pre-wrap;
    overflow-y: auto;
    border-top: 1px solid;
    border-color: #2d66c25f;
}

.inputText{
    font-family: Arial, Helvetica, sans-serif;
    color: #212121;
}

.listStyle{
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(6, auto);
    justify-items: start;
    list-style: none;
    font-family: Arial, Helvetica, sans-serif;
    padding: 0px;
}

.image{
    display: flex;
    flex-wrap: wrap;
    height: 150px;
    border-radius: 25px;
}

#tasks{
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    height: 90px;
    word-wrap: break-word;
    overflow: auto;
}

.tasks{
    display: flex;
    padding: 20px;
    text-align: left;
}

.bold{
    font-weight: bold;
    padding-bottom: 20px;
    color: #5E6472;
}

.paragraph{
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

.edit{
    position: absolute;
    top: 80px;
    left: 410px;
}

.button {
    font-size: 16px;
    position: relative;
    margin: auto;
    padding: 0.2em 0.4em 0.2em 0.4em;
    border: none;
    background: #fff;
    transition: all 0.1s linear;
    box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.1);
   }
   
   button:active {
    transform: scale(0.95);
   }
   
   button span {
    color: #464646;
   }
   
   button .border {
    position: absolute;
    border: 0.15em solid #fff;
    transition: all 0.3s 0.08s linear;
    top: 50%;
    left: 50%;
    width: 9em;
    height: 3em;
    transform: translate(-50%, -50%);
   }
   
   button:hover .border {
    display: block;
    width: 9.9em;
    height: 3.7em;
   }
   
   .full-rounded {
    border-radius: 2em;
   }

@media only screen and (max-width: 1183px) {
    .form {
        transform: scale(0.9);
        gap: 60px;
       }
}

   
@media only screen and (max-width: 768px) {
    .form {
        transform: scale(0.8);
       }
}

@media only screen and (max-width: 584px) {
   .form {
    transform: scale(0.7);
    gap: 10px;
   }
}

